add logic app in azure and the code for do it

--- a/client/waterly/client/public/web.config
+++ b/client/waterly/client/public/web.config
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
     <system.webServer>
+        <httpErrors errorMode="Detailed"></httpErrors>
         <webSocket enabled="false"/>
         <rewrite>
                 <rules>
