add modal for payment

--- a/client/waterly/client/package.json
+++ b/client/waterly/client/package.json
@@ -10,13 +10,15 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "lodash": "^4.17.15",
     "material-table": "^1.60.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.5",
     "redux-thunk": "^2.3.0"
