--- a/client/waterly/client/package.json
+++ b/client/waterly/client/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@devexpress/dx-react-chart": "^2.6.3",
-    "@devexpress/dx-react-chart-material-ui": "^2.6.3",
-    "@devexpress/dx-react-core": "^2.6.3",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
+    "devextreme": "20.1.6",
+    "devextreme-react": "20.1.6",
+    "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
     "material-table": "^1.60.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
