--- a/client/waterly/client/package.json
+++ b/client/waterly/client/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.20",
     "material-table": "^1.69.0",
     "react": "^16.13.1",
+    "react-d3-speedometer": "^0.12.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
     "react-leaflet-markercluster": "^2.0.0",
